fixed overflow:auto

--- a/gallery/static/css/style.css
+++ b/gallery/static/css/style.css
@@ -33,7 +33,7 @@ body {
 
 .card-text {
     height: 50px;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .pub_date {
